# RealNumberFormats

./: .gitignore  CMakeLists.txt  Dummy.c  Dummy.cpp  Dummy.h  LICENSE  README.md  fixedptc.h  floatx.hpp  test.cpp
